--- a/.github/workflows/prep.yml
+++ b/.github/workflows/prep.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  prep:
 
     runs-on: ubuntu-latest
 
@@ -24,3 +24,15 @@ jobs:
     - name: Install dependencies
       run: |
         pipenv install
+  run:
+    runs-on: ubuntu-latest
+    needs: prep
+    steps:
+      - shell: bash
+        env:
+          "REDDIT_USERNAME" : ${{ secrets.REDDIT_USERNAME }}
+          "REDDIT_PASSWORD" : ${{ secrets.REDDIT_PASSWORD }}
+          "API_SECRET" : ${{ secrets.API_SECRET }}
+          "API_CLIENT" : ${{ secrets.API_CLIENT }}
+        run: |
+          pipenv run python __init__.py
