--- a/.github/workflows/prep.yml
+++ b/.github/workflows/prep.yml
@@ -12,6 +12,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - shell: bash
+        env:
+          "REDDIT_USERNAME" : ${{ secrets.REDDIT_USERNAME }}
+          "REDDIT_PASSWORD" : ${{ secrets.REDDIT_PASSWORD }}
+          "API_SECRET" : ${{ secrets.API_SECRET }}
+          "API_CLIENT" : ${{ secrets.API_CLIENT }}
     - uses: actions/checkout@v2
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
@@ -24,15 +30,6 @@ jobs:
     - name: Install dependencies
       run: |
         pipenv install
-  run:
-    runs-on: ubuntu-latest
-    needs: prep
-    steps:
-      - shell: bash
-        env:
-          "REDDIT_USERNAME" : ${{ secrets.REDDIT_USERNAME }}
-          "REDDIT_PASSWORD" : ${{ secrets.REDDIT_PASSWORD }}
-          "API_SECRET" : ${{ secrets.API_SECRET }}
-          "API_CLIENT" : ${{ secrets.API_CLIENT }}
-        run: |
-          pipenv run python __init__.py
+    - name: Run bot
+      run: |
+        pipenv run python __init__.py
