Update and rename prep.yml to run.yml

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,16 +1,13 @@
-name: Prepare bot
+name: Run bot
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  schedule:
+    # Runs every 2 hours
+    - cron: "0 */2 * * *"
 
 jobs:
   prep:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.9
@@ -31,5 +28,9 @@ jobs:
         "REDDIT_PASSWORD" : ${{ secrets.REDDIT_PASSWORD }}
         "API_SECRET" : ${{ secrets.API_SECRET }}
         "API_CLIENT" : ${{ secrets.API_CLIENT }}
+        "FIREBASE_PRIVATE_KEY" : ${{ secrets.FIREBASE_PRIVATE_KEY }}
+        "FIREBASE_PRIVATE_KEY_ID" : ${{ secrets.FIREBASE_PRIVATE_KEY_ID }}
+        "FIREBASE_CLIENT_EMAIL" : ${{ secrets.FIREBASE_CLIENT_EMAIL }}
+        "FIREBASE_CLIENT_ID" : ${{ secrets.FIREBASE_CLIENT_ID }}
       run: |
         pipenv run python __init__.py
