--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -10,6 +10,15 @@ jobs:
   prep:
     runs-on: ubuntu-latest
     steps:
+    env:
+      REDDIT_USERNAME : ${{ secrets.REDDIT_USERNAME }}
+      REDDIT_PASSWORD : ${{ secrets.REDDIT_PASSWORD }}
+      API_SECRET : ${{ secrets.API_SECRET }}
+      API_CLIENT : ${{ secrets.API_CLIENT }}
+      FIREBASE_PRIVATE_KEY : ${{ secrets.FIREBASE_PRIVATE_KEY }}
+      FIREBASE_PRIVATE_KEY_ID : ${{ secrets.FIREBASE_PRIVATE_KEY_ID }}
+      FIREBASE_CLIENT_EMAIL : ${{ secrets.FIREBASE_CLIENT_EMAIL }}
+      FIREBASE_CLIENT_ID : ${{ secrets.FIREBASE_CLIENT_ID }}
     - uses: actions/checkout@v2
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
@@ -23,15 +32,5 @@ jobs:
       run: |
         pipenv install
     - name: Run bot
-      shell: bash
-      env:
-        "REDDIT_USERNAME" : ${{ secrets.REDDIT_USERNAME }}
-        "REDDIT_PASSWORD" : ${{ secrets.REDDIT_PASSWORD }}
-        "API_SECRET" : ${{ secrets.API_SECRET }}
-        "API_CLIENT" : ${{ secrets.API_CLIENT }}
-        "FIREBASE_PRIVATE_KEY" : ${{ secrets.FIREBASE_PRIVATE_KEY }}
-        "FIREBASE_PRIVATE_KEY_ID" : ${{ secrets.FIREBASE_PRIVATE_KEY_ID }}
-        "FIREBASE_CLIENT_EMAIL" : ${{ secrets.FIREBASE_CLIENT_EMAIL }}
-        "FIREBASE_CLIENT_ID" : ${{ secrets.FIREBASE_CLIENT_ID }}
       run: |
         pipenv run python __init__.py
