--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -11,12 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Display url
-      shell: bash
-      env:
-        SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-      run: |
-        echo $SUPABASE_URL | sed 's/./& /g' 
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
@@ -28,18 +22,13 @@ jobs:
     - name: Install dependencies
       run: |
         pipenv install
-    - name: Create env file
-      shell: bash
-      run: |
-        touch .env
-        echo REDDIT_USERNAME=${{ secrets.REDDIT_USERNAME }} >> .env
-        echo REDDIT_PASSWORD=${{ secrets.REDDIT_PASSWORD }} >> .env
-        echo API_SECRET=${{ secrets.API_SECRET }} >> .env
-        echo API_CLIENT=${{ secrets.API_CLIENT }} >> .env
-        echo SUPABASE_KEY=${{ secrets.SUPABASE_KEY }} >> .env
-        echo SUPABASE_URL=${{ secrets.SUPABASE_URL }} >> .env
-        cat .env
     - name: Run bot
-      shell: bash
+      env:
+        REDDIT_USERNAME:${{ secrets.REDDIT_USERNAME }}
+        REDDIT_PASSWORD:${{ secrets.REDDIT_PASSWORD }}
+        API_SECRET:${{ secrets.API_SECRET }}
+        API_CLIENT:${{ secrets.API_CLIENT }}
+        SUPABASE_KEY:${{ secrets.SUPABASE_KEY }}
+        SUPABASE_URL:${{ secrets.SUPABASE_URL }}
       run: |
         pipenv run python __init__.py
